--- a/src/templates/base.html
+++ b/src/templates/base.html
@@ -27,12 +27,12 @@
             color: #fff;
             text-align: center;
             padding: 12px 0;
-            position: fixed;
-            left: 0;
-            bottom: 0;
             width: 100%;
             font-size: 1rem;
             z-index: 100;
+            position: fixed;
+            bottom: 0;
+            left: 0;
         }
     </style>
 </head>
@@ -62,7 +62,7 @@
       </div>
     </nav>
     {% block content %}{% endblock %}
-    <footer class="bg-primary">
+    <footer class="footer bg-primary">
         app emilio21 todos los derechos reservados
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
