--- a/src/templates/musicas.html
+++ b/src/templates/musicas.html
@@ -7,58 +7,62 @@
             <div class="card">
                 <div class="card-body">
                     <h3 class="card-title text-center mb-4">Músicas descargadas</h3>
-                    <table id="musicas-table" class="table table-striped">
-                        <thead>
-                            <tr>
-                                <th>#</th>
-                                <th>Nombre del archivo</th>
-                                <th>Acciones</th>
-                            </tr>
-                        </thead>
-                        <tbody>
-                            {% for musica in musicas %}
-                            <tr>
-                                <td>{{ loop.index }}</td>
-                                <td>{{ musica }}</td>
-                                <td>
-                                    <a href="{{ url_for('routes.serve_download', filename=musica) }}" class="btn btn-success btn-sm" download>Descargar</a>
-                                    <form action="{{ url_for('routes.eliminar_musica', filename=musica) }}" method="post" style="display:inline;">
-                                        <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('¿Seguro que deseas eliminar esta música?');">Eliminar</button>
-                                    </form>
-                                </td>
-                            </tr>
-                            {% else %}
-                            <tr>
-                                <td colspan="3" class="text-center">No hay músicas descargadas.</td>
-                            </tr>
-                            {% endfor %}
-                        </tbody>
-                    </table>
+                    <div class="table-responsive">
+                        <table id="musicas-table" class="table table-striped">
+                            <thead>
+                                <tr>
+                                    <th>#</th>
+                                    <th>Nombre del archivo</th>
+                                    <th>Acciones</th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                {% for musica in musicas %}
+                                <tr>
+                                    <td>{{ loop.index }}</td>
+                                    <td>{{ musica }}</td>
+                                    <td>
+                                        <a href="{{ url_for('routes.serve_download', filename=musica) }}" class="btn btn-success btn-sm" download>Descargar</a>
+                                        <form action="{{ url_for('routes.eliminar_musica', filename=musica) }}" method="post" style="display:inline;">
+                                            <button type="submit" class="btn btn-danger btn-sm" onclick="return confirm('¿Seguro que deseas eliminar esta música?');">Eliminar</button>
+                                        </form>
+                                    </td>
+                                </tr>
+                                {% else %}
+                                <tr>
+                                    <td colspan="3" class="text-center">No hay músicas descargadas.</td>
+                                </tr>
+                                {% endfor %}
+                            </tbody>
+                        </table>
+                    </div>
+                    {% if musicas|length > 0 %}
+                    <link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css">
+                    <script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
+                    <script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
+                    <script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
+                    <script>
+                        $(document).ready(function () {
+                            $('#musicas-table').DataTable({
+                                "pageLength": 5,
+                                "lengthChange": false,
+                                "language": {
+                                    "search": "Buscar:",
+                                    "paginate": {
+                                        "next": "Siguiente",
+                                        "previous": "Anterior"
+                                    },
+                                    "info": "Mostrando _START_ a _END_ de _TOTAL_ músicas",
+                                    "infoEmpty": "No hay músicas para mostrar",
+                                    "zeroRecords": "No se encontraron resultados"
+                                }
+                            });
+                        });
+                    </script>
+                    {% endif %}
                 </div>
             </div>
         </div>
     </div>
 </div>
-<link rel="stylesheet" href="https://cdn.datatables.net/1.13.6/css/dataTables.bootstrap5.min.css">
-<script src="https://code.jquery.com/jquery-3.7.1.min.js"></script>
-<script src="https://cdn.datatables.net/1.13.6/js/jquery.dataTables.min.js"></script>
-<script src="https://cdn.datatables.net/1.13.6/js/dataTables.bootstrap5.min.js"></script>
-<script>
-    $(document).ready(function () {
-        $('#musicas-table').DataTable({
-            "pageLength": 5,
-            "lengthChange": false,
-            "language": {
-                "search": "Buscar:",
-                "paginate": {
-                    "next": "Siguiente",
-                    "previous": "Anterior"
-                },
-                "info": "Mostrando _START_ a _END_ de _TOTAL_ músicas",
-                "infoEmpty": "No hay músicas para mostrar",
-                "zeroRecords": "No se encontraron resultados"
-            }
-        });
-    });
-</script>
 {% endblock %}
