--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
     {% if message %}
     <div class="alert alert-info mt-3" style="background: #dff6ff; border: 1px solid #bde3f7;">
         {{ message }}
-        <button class="btn btn-primary btn-sm float-end" onclick="location.reload()">Descargar otra canción</button>
+        <button class="btn btn-primary btn-sm float-end" onclick="window.location.href='/'">Descargar otra canción</button>
     </div>
     {% endif %}
     <h4 class="mt-5">Músicas descargadas</h4>
